--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=thinkpro
+spring.application.name=laptoptcc
 server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -24,8 +24,8 @@ spring.session.jdbc.initialize-schema=always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xuantung2113@gmail.com
-spring.mail.password=uwrp eatm thgu rsky
+spring.mail.username=contact.nhom10@gmail.com
+spring.mail.password=irob mveb udfn ukys
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
